fixing overflow bugs

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -204,59 +204,30 @@ body{
     top:50%;
 }
 
-/* 
-@media screen and (min-width:1024px){
-    .character-grid{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: "name image" "labels image";
-    }
-
-    .character-image{
-        grid-area: name;
-        width: 300px;
-        border-radius: 50%;
-    }
-    .character-name{
-        text-align: left;
-    }
-    .character-name h2{
-        font-size: 50px;
-        position: relative;
-        display: inline-flex;
-    }
-    .character-name h2:after{
-        content: "";
-        width: 87px;
-        height: 6px;
-        background-color:  #f7391c;
-        display: inline-flex;
-        position: absolute;
-        left: calc(100% + 5px);
-        top:50%;
-    }
-    .character-labels{
-        grid-area: labels;
-        max-width: 300px;
-    }
-    .character-image{
-        grid-area: image;
-    }
-} */
-
-.character-name-placeholder{
-    color: rgba(0,0,0,.1);
-    font-size: 600px;
-    position: absolute;
+.plasholder-container{
+    /* max-width: 100vw; */
+    overflow-x: hidden;
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
     top:0;
+}
+
+.character-name-placeholder{
+    color: rgba(0,0,0,.1);
+    font-size: 600px;
     text-transform: uppercase;
     display: flex;
     justify-content: center;
     align-items: center;
     white-space: nowrap;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top:0;
+}
 }
 
 @media screen and (max-width:1440px){
@@ -285,6 +256,11 @@ body{
     }
     .character-name{
         text-align: center;
+    }
+
+    .character-name h2:after{
+        left: 0;
+        top: calc(100% - 20px);
     }
     
     .character-name-container{
